@@ -99,7 +99,7 @@ it?</h3>
 
 <p>
 No.  We give it away for free.  Go to the <a
-href="../download">download page</a>.
+href="../install">download page</a>.
 
 <h3>It's free now, but then you will start charging in the future?</h3>
 
