@@ -3,7 +3,7 @@
 <a name="warning"></a>
 <em><strong>WARNING</strong>:
   Building LilyPond is an involved process.  If possible,
-  <a href="../download">download a precompiled binary</a> for your
+  <a href="../install">download a precompiled binary</a> for your
   platform.</em>
 
 <h2>Source code</h2>
