@@ -63,7 +63,7 @@
   <dt>Libre software</dt>
   <dd>
       How much it costs?  Nada, zilch, nothing!  Yep - It's free.  Get
-      it from the <a href="../download">download page</a>.
+      it from the <a href="../install">download page</a>.
     <p>
       Moreover it's also free (as in "speech") software.  It comes with
       source code, and permission to change and copy it.  So, are you
